ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: testweb-app1
spec:
  type: NodePort
  selector:
    app: testweb-app1
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
apiVersion: v1
kind: Service
metadata:
  name: testweb-app2
spec:
  type: NodePort
  selector:
    app: testweb-app2 
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
